# geoprox

./: .editorconfig  .gitattributes  .gitignore  .rustfmt.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  docker-compose.yml  index.html  justfile
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: audit.yml  benchmark.yml  ci.yml  docker.yml  docs.yml  lint.yml  rust.yml
bench/: data.js
contrib/client-sdk/: .gitignore  README.md  justfile  manifest.jsonnet  package.json  shell.nix
contrib/client-sdk/csharp/: GeoproxClient.sln  README.md  appveyor.yml
contrib/client-sdk/csharp/.openapi-generator/: FILES
contrib/client-sdk/csharp/api/: openapi.yaml
contrib/client-sdk/csharp/docs/: CreateIndexResponse.md  DecodeGeohashResponse.md  DropIndexResponse.md  EncodeLatLng.md  EncodeLatLngResponse.md  GeohashApiApi.md  GeohashNeighborsResponse.md  GeoshardApiApi.md  InsertKey.md  InsertKeyBatch.md  InsertKeyBatchResponse.md  InsertKeyResponse.md  Neighbor.md  QueryRange.md  QueryRangeMany.md  QueryRangeManyResponse.md  QueryRangeResponse.md  RemoveKey.md  RemoveKeyBatch.md  RemoveKeyBatchResponse.md  RemoveKeyResponse.md
contrib/client-sdk/dart/: README.md  pubspec.yaml
contrib/client-sdk/dart-dio/: README.md  pubspec.yaml
contrib/client-sdk/dart-dio/.openapi-generator/: FILES
contrib/client-sdk/dart-dio/doc/: CreateIndexResponse.md  (+20 more)
contrib/client-sdk/elixir/: README.md  mix.exs
contrib/client-sdk/go/: README.md  api_geohash_api.go  api_geoshard_api.go  client.go  configuration.go  model_create_index_response.go  model_decode_geohash_response.go  model_drop_index_response.go  model_encode_lat_lng.go  model_encode_lat_lng_response.go  model_geohash_neighbors_response.go  model_insert_key.go  model_insert_key_batch.go  model_insert_key_batch_response.go  model_insert_key_response.go  model_neighbor.go  model_query_range.go  model_query_range_many.go  model_query_range_many_response.go  model_query_range_response.go  model_remove_key.go  model_remove_key_batch.go  model_remove_key_batch_response.go  model_remove_key_response.go  response.go  utils.go
contrib/client-sdk/groovy/: README.md  build.gradle
contrib/client-sdk/kotlin/: README.md  build.gradle  settings.gradle
contrib/client-sdk/markdown/: README.md
contrib/client-sdk/php/: README.md  composer.json
contrib/client-sdk/python/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
contrib/client-sdk/ruby/: .travis.yml  README.md  geoprox_client.gemspec
contrib/client-sdk/rust/: Cargo.toml  README.md
contrib/client-sdk/rust/.openapi-generator/: FILES
contrib/client-sdk/rust/docs/: CreateIndexResponse.md  DecodeGeohashResponse.md  DropIndexResponse.md  EncodeLatLng.md  EncodeLatLngResponse.md  GeohashApiApi.md  GeohashNeighborsResponse.md  GeoshardApiApi.md  InsertKey.md  InsertKeyBatch.md  InsertKeyBatchResponse.md  InsertKeyResponse.md  KeysFoundInner.md  Neighbor.md  QueryRange.md  QueryRangeMany.md  QueryRangeManyResponse.md  QueryRangeResponse.md  RemoveKey.md  RemoveKeyBatch.md  RemoveKeyBatchResponse.md  RemoveKeyResponse.md
contrib/client-sdk/rust/src/apis/: configuration.rs  geohash_api_api.rs  geoshard_api_api.rs  mod.rs
contrib/client-sdk/rust/src/models/: create_index_response.rs  decode_geohash_response.rs  drop_index_response.rs  encode_lat_lng.rs  encode_lat_lng_response.rs  geohash_neighbors_response.rs  insert_key.rs  insert_key_batch.rs  insert_key_batch_response.rs  insert_key_response.rs  keys_found_inner.rs  mod.rs  neighbor.rs  query_range.rs  query_range_many.rs  query_range_many_response.rs  query_range_response.rs  remove_key.rs  remove_key_batch.rs  remove_key_batch_response.rs  remove_key_response.rs
contrib/client-sdk/typescript-axios/: README.md  api.ts  base.ts  common.ts  configuration.ts  index.ts  package.json
contrib/client-sdk/typescript-fetch/: README.md  package.json
contrib/client-sdk/typescript-node/: package.json
contrib/client-sdk/typescript-rxjs/: README.md  package.json  runtime.ts
contrib/docker/: .dockerignore  Dockerfile.alpine  Dockerfile.debian  README.md
contrib/docker/dev/: docker-compose.yml  geoprox.toml
contrib/docker/quickstart/: .gitignore  docker-compose.yml  geoprox.toml
contrib/docs/: book.toml
contrib/docs/src/: SUMMARY.md  chapter_1.md  chapter_2.md  chapter_2_1.md  chapter_2_2.md  chapter_2_3.md  chapter_3.md  chapter_3_1.md  chapter_3_2.md  chapter_3_3.md
demo/: package.json
demo/src/: api.ts  helpers.ts
demo/src/components/: MapDialog.tsx  WorldMap.tsx
docs/: 404.html  chapter_1.html  chapter_2.html  chapter_2_1.html  chapter_2_2.html  chapter_2_3.html  chapter_3.html  chapter_3_1.html  chapter_3_2.html  chapter_3_3.html  index.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
examples/demo/: index.html
examples/demo/src/: api.ts  main.tsx  store.ts
frontend/: package.json
frontend/src/: App.tsx  api.ts  helpers.ts  store.ts
frontend/src/components/: Dialog.tsx  WorldMap.tsx  index.ts
geoprox/: CHANGELOG.md  Cargo.toml  README.md  geoprox.default.toml
geoprox-core/: CHANGELOG.md  Cargo.toml  README.md  clippy.toml
geoprox-core/benches/: spatial_index_benchmark.rs
geoprox-core/src/: cache.rs  index.rs  lib.rs  metric.rs  models.rs  registry.rs  serde.rs  shard.rs
geoprox-server/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
geoprox-server/docs/: README.md
geoprox-server/docs/Apis/: GeohashApi.md  GeohashApiApi.md  GeoshardApi.md  GeoshardApiApi.md
geoprox-server/docs/Models/: CreateIndexResponse.md  DecodeGeohashResponse.md  EncodeLatLngResponse.md  InsertKey.md  InsertKeyBatch.md  InsertKeyBatchResponse.md  InsertKeyResponse.md  QueryRangeMany.md  QueryRangeManyResponse.md  QueryRangeResponse.md  RemoveKey.md  RemoveKeyBatch.md  RemoveKeyBatchResponse.md  RemoveKeyResponse.md
geoprox-server/src/: api.rs  app.rs  config.rs  dto.rs  handlers.rs  lib.rs  middleware.rs  models.rs
geoprox/src/: cli.rs  main.rs
src/: app.rs  handlers.rs  lib.rs  main.rs  models.rs  server.rs
(+650 files in other folders)
