[package]
name = "geoprox"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
geohash = "0.13.1"
kiddo = { version = "4.2.0", features = ["serialize"] }
patricia_tree = { version = "0.8.0", features = ["serde"] }
riteraft = "0.1.0"
serde = { version = "1.0.199", features = ["derive", "rc"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
