[package]
name = "geoprox-core"
version = "0.3.0"
edition = "2021"
description = "Core library for Geoprox, provides geospatial indexing and sharding functionalities."
categories = ["science::geo", "data-structures", "algorithms"]
keywords = ["geo", "proximity", "geohash", "pairing", "nearest-neighbor"]
readme = "README.md"
repository = "https://github.com/ezrasingh/geoprox"
documentation = "https://docs.rs/geoprox-core"
license = "MIT OR Apache-2.0"

[dependencies]
ahash = "0.8.11"
geohash = "0.13.1"
hashbrown = { version = "0.14.5", features = ["serde"] }
haversine = "0.2.1"
kiddo = { version = "4.2.0", features = ["serialize"] }
log = "0.4.22"
patricia_tree = { version = "0.8.0", features = ["serde"] }
rayon = "1.10.0"
serde = { version = "1.0.199", features = ["derive", "rc"] }
utoipa = { version = "4.2.3", optional = true }

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"

[features]
utoipa = ["dep:utoipa"]

[[bench]]
name = "spatial_index_benchmark"
harness = false
