[package]
name = "geoprox-core"
version = "0.4.2"
edition = "2021"
description = "Core library for Geoprox, provides geospatial indexing and search functionalities"
categories = ["science::geo", "data-structures", "algorithms", "caching"]
keywords = ["geospatial", "search", "geohash", "nearest-neighbor", "proximity"]
readme = "README.md"
repository = "https://github.com/ezrasingh/geoprox"
documentation = "https://docs.rs/geoprox-core"
license = "MIT OR Apache-2.0"

[dependencies]
ahash = "0.8.11"
geohash = "0.13.1"
hashbrown = { version = "0.14.5", features = ["serde", "rayon"] }
haversine-rs = "0.3.0"
itertools = "0.13.0"
kiddo = { git = "https://github.com/sdd/kiddo.git", version = "4.2.0", rev = "cc62c6d76accdeba75c0f55db80c28eab8a21ae7", features = [
    "serialize",
    "rayon",
] }
log = "0.4.22"
patricia_tree = { version = "0.8.0", features = ["serde"] }
rayon = "1.10.0"
serde = { version = "1.0.199", features = ["derive", "rc"] }
utoipa = { version = "4.2.3", optional = true }

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"

[features]
utoipa = ["dep:utoipa"]

[[bench]]
name = "spatial_index_benchmark"
harness = false
