[package]
name = "geoprox-server"
version = "0.1.0"
edition = "2021"
authors = ["Ezra Singh <singhezra@gmail.com>"]
description = "A Geo-Proximity detection service for efficient real-time geo-aware contract pairing. Ideal for rideshare pairing services"
keywords = ["geo", "proximity", "geohash", "pairing", "api"]
readme = "README.md"
repository = "https://github.com/ezrasingh/geoprox"
documentation = "https://docs.rs/geoprox-server"
license = "MIT OR Apache-2.0"

[dependencies]
geoprox-core = { path = "../geoprox-core" }
axum = { version = "0.7.5", features = ["macros"] }
serde = { version = "1.0.199", features = ["derive", "rc"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }


[dev-dependencies]
axum-test = "15.3.0"
