[package]
name = "geoprox-server"
version = "0.4.2"
edition = "2021"
authors = ["Ezra Singh <singhezra@gmail.com>"]
description = "Geoprox server implementation providing a HTTP API for geospatial queries and position tracking"
categories = ["science::geo", "web-programming::http-server", "caching"]
keywords = ["geospatial", "search", "location-based", "pairing", "api"]
readme = "README.md"
repository = "https://github.com/ezrasingh/geoprox"
documentation = "https://docs.rs/geoprox-server"
license = "MIT OR Apache-2.0"

[dependencies]
geoprox-core = { path = "../geoprox-core", version = "0.4.2", features = [
    "utoipa",
] }
axum = { version = "0.7.5", features = ["macros"] }
serde = { version = "1.0.199", features = ["derive", "rc"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = [
    "fs",
    "trace",
    "timeout",
    "compression-full",
    "decompression-full",
    "normalize-path",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
anyhow = "1.0.86"
bincode = "1.3.3"
duration-string = { version = "0.4.0", features = ["serde"] }


[dev-dependencies]
axum-test = "15.3.0"
