[package]
name = "geoprox"
version = "0.1.0"
edition = "2021"
authors = ["Ezra Singh <singhezra@gmail.com>"]
description = "A Geo-Proximity detection service for efficient real-time geo-aware contract pairing. Ideal for rideshare pairing services"
categories = ["command-line-interface", "science::geo"]
keywords = ["geo", "proximity", "geohash", "pairing", "nearest-neighbor"]
readme = "README.md"
repository = "https://github.com/ezrasingh/geoprox"
documentation = "https://docs.rs/geoprox"
license = "MIT OR Apache-2.0"

[dependencies]
geoprox-core = { path = "../geoprox-core" }
geoprox-server = { path = "../geoprox-server" }
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.199", features = ["derive", "rc"] }
serde_json = "1.0.116"
config = "0.14.0"
