[package]
name = "geoprox"
version = "0.4.0"
edition = "2021"
authors = ["Ezra Singh <singhezra@gmail.com>"]
description = "Standalone CLI for running the Geoprox service"
categories = ["science::geo", "command-line-interface"]
keywords = ["geospatial", "search", "location-based", "pairing", "geohash"]
readme = "README.md"
repository = "https://github.com/ezrasingh/geoprox"
documentation = "https://docs.rs/geoprox"
license = "MIT OR Apache-2.0"

[dependencies]
geoprox-core = { path = "../geoprox-core", version = "0.4.0" }
geoprox-server = { path = "../geoprox-server", version = "0.4.0" }
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.199", features = ["derive", "rc"] }
serde_json = "1.0.116"
config = "0.14.0"
