[package]
name = "geoprox-client"
version = "0.2.0"
authors = ["singhezra@gmail.com"]
description = "Geoprox server implementation providing a HTTP API for geospatial queries and position tracking"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
reqwest = { version = "^0.12", features = ["json", "multipart"] }
